# steamdb-checker-cli

./: .ignore  Cargo.toml  fetch-csv.js
src/: checker.rs  entry.rs  find_extra.rs  main.rs  prelude.rs  state.rs  verifier.rs
src/tests/: mod.rs
src/tests/assets/: dir1_extra_sum.csv  dir1_invalid_sum.csv  dir1_missing_sum.csv  dir1_sum.csv
src/tests/assets/dir1/: file_1050.txt  file_4695.txt  file_7197.txt  file_7215.txt  文件_2218.txt
src/tests/assets/dir1/dir_7873/: file_2611.txt  file_3732.txt  file_5809.txt  file_9895.txt
src/tests/assets/dir1/dir_7873/dir_5685/: file_1898.txt  file_7969.txt  file_8210.txt  file_8499.txt  file_8995.txt
