[package]
name = "steamdb-checker-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["cargo"] }
csv = "1.4.0"
hex = { version = "0.4.3" }
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
